syntax = "proto3";
package textchange;
option go_package = "textchange";

message TextContent {
  oneof value {
    TextAppend textAppend = 1;
  }
}

message TextAppend {
  string text = 1;
}

message TextSnapshot {
  string text = 1;
}

message TextData {
  repeated TextContent content = 1;
  TextSnapshot snapshot = 2;
}
